# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  generate_diff.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: diff_json_1_3.txt  file3.json
